Fixed bug #39542 (Behaviour of require/include different to < 5.2.0)