Zend/tests/bug39542/bug39542.php
@@ -1,0 +1,7 @@
+<?php
+class bug39542 {
+	function bug39542() {
+		echo "ok\n";
+	}
+}
+?>
